[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/inventory.png" type="Texture" id=1]
[ext_resource path="res://UI/ToolTip.gd" type="Script" id=2]

[node name="ToolTip" type="Popup"]
margin_right = 120.0
margin_bottom = 120.0
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 10
custom_constants/margin_top = 15
custom_constants/margin_left = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/MarginContainer"]
margin_left = 10.0
margin_top = 15.0
margin_right = 110.0
margin_bottom = 120.0
mouse_filter = 2

[node name="ItemName" type="RichTextLabel" parent="NinePatchRect/MarginContainer/VBoxContainer"]
margin_right = 100.0
margin_bottom = 15.0
bbcode_enabled = true
fit_content_height = true

[node name="ItemDesc" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer"]
margin_top = 19.0
margin_right = 100.0
margin_bottom = 33.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
autowrap = true

[node name="Stat1" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer"]
margin_top = 37.0
margin_right = 100.0
margin_bottom = 51.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )

[node name="Stat2" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer"]
margin_top = 55.0
margin_right = 100.0
margin_bottom = 69.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )

[node name="Stat3" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer"]
margin_top = 73.0
margin_right = 100.0
margin_bottom = 87.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
